service package refactored and simplified